feat: MERGE를 Hive INSERT OVERWRITE로 재작성 및 함수/포맷 치환

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ GUIDELINES.md
 .cursorrules
 # Optional future local Cursor files/directories
 .cursor/
+
+# Ignore company examples (sensitive)
+examples/
