--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = ">=3.11,<3.12"
 openai = "^1.40.0"
 python-dotenv = "^1.0.1"
 click = "^8.1.7"
+PyMySQL = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
